--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/style/doughnut.css
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/style/doughnut.css
@@ -1,2 +1,2 @@
-.donut__total___1sg_-{color:#000}.donut__mBes___hzaWs{color:#00008b}.donut__completed___1zH6k{color:#84b761}.donut__incomplete___1Gev0{color:#808184}.donut__missing___38Kem{color:#cc4748}
+.donut__total___1sg_-{color:#000;font-size:2em}.donut__mBes___hzaWs{color:#00008b;font-size:2em}.donut__completed___1zH6k{color:#84b761;font-size:2em}.donut__incomplete___1Gev0{color:#808184;font-size:2em}.donut__missing___38Kem{color:#cc4748;font-size:2em}h3{font-size:40px;color:#008b8b;padding-left:60px}
 /*# sourceMappingURL=styles.css.map*/
