--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/dashboard.vm
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/dashboard.vm
@@ -77,7 +77,6 @@ jQuery( document ).ready( function() {
     <div id="dashboardListWrapper" class="dashboardList">
         <ul id="dashboardList">
         </ul>
-        <ul id="dashboardList"></ul>
     </div>
 </div>
 
@@ -135,5 +134,5 @@ jQuery( document ).ready( function() {
     </div>
 </div>
 
-<script type="text/javascript" src="javascript/doughnut.js"></script>
+<script type="text/javascript" src="javascript/donut.js"></script>
 
