Add column-count css for firefox.

--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/DoughnutChart/src/app/donut.css
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/DoughnutChart/src/app/donut.css
@@ -1,8 +1,12 @@
 .titleContainer {
+  -webkit-column-count: 2; /* Chrome, Safari, Opera */
+  -moz-column-count: 2; /* Firefox */
   column-count: 2
 }
 
 .contentContainer {
+  -webkit-column-count: 4; /* Chrome, Safari, Opera */
+  -moz-column-count: 4; /* Firefox */
   column-count: 4
 }
 
