Fix the defect about donut chart which was cut by small size of screen.

--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/DoughnutChart/src/app/donut.css
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/DoughnutChart/src/app/donut.css
@@ -1,21 +1,22 @@
 .titleContainer {
   -webkit-column-count: 2; /* Chrome, Safari, Opera */
   -moz-column-count: 2; /* Firefox */
-  column-count: 2
+  column-count: 2;
 }
 
 .contentContainer {
   -webkit-column-count: 4; /* Chrome, Safari, Opera */
   -moz-column-count: 4; /* Firefox */
-  column-count: 4
+  column-count: 4;
+  width: 120em;
 }
 
-.currentWeek {
+.lastWeek {
   padding-top: 130px;
   padding-left: 100px
 }
 
-.lastWeek {
+.theWeekBeforeLastWeek {
   padding-top: 148px;
   padding-left: 100px
 }
