[#25 -] Add link for Middleware database on DSD login page.

--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/security/login.vm
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/security/login.vm
@@ -50,6 +50,9 @@
                     <a id="forgotPasswordLink" href="recovery.action">Forgot password?</a>
                 </div>
                 #end
+                <div id="redirectToMBes" style="padding-bottom: 10px">
+                    <a href="http://www.supervisaombes.com">Redirect to mBES</a>
+                </div>
                 #if( $keyConfig.selfRegistrationAllowed() )
                 <div style="padding-bottom: 10px">                	
                 	<a id="createAccountLink" href="account.action">Create an account</a>
