Remove inline css style to css file.

--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/security/login.vm
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/security/login.vm
@@ -50,7 +50,7 @@
                     <a id="forgotPasswordLink" href="recovery.action">Forgot password?</a>
                 </div>
                 #end
-                <div id="redirectToMBes" style="padding-bottom: 10px">
+                <div id="redirectToMBes">
                     <a href="http://www.supervisaombes.com">Redirect to mBES</a>
                 </div>
                 #if( $keyConfig.selfRegistrationAllowed() )
