Add alert configuration pages.

--- a/dhis-2/dhis-web/dhis-web-validationrule/src/main/webapp/dhis-web-validationrule/menu.vm
+++ b/dhis-2/dhis-web/dhis-web-validationrule/src/main/webapp/dhis-web-validationrule/menu.vm
@@ -5,6 +5,11 @@
 	#if( $security.canView( "validationRuleGroup" ) )<li><a href="validationRuleGroup.action">$i18n.getString( "validation_rule_group" )&nbsp;</a></li>#end
 </ul>
 
+<h2>$i18n.getString("validation_configuration")</h2>
+<ul>
+    <li><a href="getAlertConfiguration.action">$i18n.getString("alert_configuration")&nbsp;</a> </li>
+</ul>
+
 <h2>$i18n.getString( "data_analysis" )&nbsp;</h2>
 <ul>
 	<li><a href="showRunValidationForm.action">$i18n.getString( "validation_rule_analysis" )&nbsp;</a></li>
