--- a/dhis-2/dhis-web/dhis-web-validationrule/src/main/webapp/dhis-web-validationrule/index.vm
+++ b/dhis-2/dhis-web/dhis-web-validationrule/src/main/webapp/dhis-web-validationrule/index.vm
@@ -3,4 +3,5 @@
 <ul class="introList">
     #if( $security.canView( "validationRule" ) )#introListImgItem( "validationRule.action" "validation_rule" "validationrule" )#end
     #if( $security.canView( "validationRuleGroup" ) )#introListImgItem( "validationRuleGroup.action" "validation_rule_group" "validationrule" )#end
+    #introListImgItem( "getAlertConfiguration.action" "alert_configuration" "validationrule" )
 </ul>
