--- a/dhis-2/dhis-web/dhis-web-validationrule/src/main/webapp/dhis-web-validationrule/alertConfiguration.vm
+++ b/dhis-2/dhis-web/dhis-web-validationrule/src/main/webapp/dhis-web-validationrule/alertConfiguration.vm
@@ -1,14 +1,13 @@
-<script type="text/javascript" src="javascript/multipicker.js"></script>
-<script type="text/javascript" src="javascript/alertConfig.js"></script>
-
 <link type="text/css" rel="stylesheet" href="javascript/multipicker.css" />
 
-<h3>$encoder.htmlEncode( $i18n.getString( "alert_configruation" ) )</h3>
+<h3>$encoder.htmlEncode( $i18n.getString( "alert_configuration" ) )</h3>
 
 
 <form id="updateAlertConfiguration" action="updateAlertConfiguration.action" method="POST" class="inputForm">
 
 
+    #set($viewDays = $!days)
+    #set($viewAlertTime = $!alertTime)
     <table>
         <tr>
             <th colspan="2"></th>
@@ -21,7 +20,7 @@
                     <li>Sun</li>
                     <li>Mon</li>
                     <li>Tue</li>
-                    <li>Wen</li>
+                    <li>Wed</li>
                     <li>Thu</li>
                     <li>Fri</li>
                     <li>Sat</li>
@@ -33,24 +32,32 @@
         <tr>
             <td>Time:</td>
             <td>
-                <ul id="times">
-                    <li>5:00</li>
-                    <li>6:00</li>
-                    <li>7:00</li>
-                    <li>8:00</li>
-                    <li>9:00</li>
-                    <li>10:00</li>
-                    <li>11:00</li>
-                    <li>12:00</li>
-                    <li>13:00</li>
-                    <li>14:00</li>
-                    <li>18:00</li>
-                    <li>19:00</li>
-                    <li>20:00</li>
-                    <li>21:00</li>
-                    <li>22:00</li>
-                    <li>23:00</li>
-                </ul>
+                <div id="timeMul">
+                    <input type="radio" name="alertTime" value="0:00">
+                    <input type="radio" name="alertTime" value="1:00">
+                    <input type="radio" name="alertTime" value="2:00">
+                    <input type="radio" name="alertTime" value="3:00">
+                    <input type="radio" name="alertTime" value="4:00">
+                    <input type="radio" name="alertTime" value="5:00">
+                    <input type="radio" name="alertTime" value="6:00">
+                    <input type="radio" name="alertTime" value="7:00">
+                    <input type="radio" name="alertTime" value="8:00">
+                    <input type="radio" name="alertTime" value="9:00">
+                    <input type="radio" name="alertTime" value="10:00">
+                    <input type="radio" name="alertTime" value="11:00">
+                    <input type="radio" name="alertTime" value="12:00">
+                    <input type="radio" name="alertTime" value="13:00">
+                    <input type="radio" name="alertTime" value="14:00">
+                    <input type="radio" name="alertTime" value="15:00">
+                    <input type="radio" name="alertTime" value="16:00">
+                    <input type="radio" name="alertTime" value="17:00">
+                    <input type="radio" name="alertTime" value="18:00">
+                    <input type="radio" name="alertTime" value="19:00">
+                    <input type="radio" name="alertTime" value="20:00">
+                    <input type="radio" name="alertTime" value="21:00">
+                    <input type="radio" name="alertTime" value="22:00">
+                    <input type="radio" name="alertTime" value="23:00">
+                </div>
             </td>
         </tr>
 
@@ -65,6 +72,6 @@
 </form>
 
 <script type="text/javascript">
-    dayPicker();
-    timePicker();
+    dayPicker('$viewDays');
+    timePicker('$viewAlertTime');
 </script>
