[TPS-11][wang yue] Freeze the top row and column header for all three tabular reports

--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/scripts/components/reporting-row/index.scss
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/scripts/components/reporting-row/index.scss
@@ -55,6 +55,19 @@
   background: #dfe6ec;
 }
 
+.primaryColor {
+  background: #535353;
+  color: white;
+}
+
+.secondaryColor {
+  background: #A7A7A7;
+}
+
+.tertiaryColor {
+  background: #DDDDDD;
+}
+
 .primaryTitle, .secondaryTitle, .tertiaryTitle {
   font-size: 1.1rem;
   font-weight: bold;
