--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/DoughnutChart/src/app/donut.css
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/DoughnutChart/src/app/donut.css
@@ -19,12 +19,10 @@
 .searchContainer {
   width: 60%;
   height: 150px;
-  border: 1px solid red;
 }
 
 .datepickerDiv {
   width: 48%;
-  border: 1px solid black;
   float: left;
   height: 55%;
 }
@@ -32,7 +30,6 @@
 .locationDiv {
   width: 48%;
   float: right;
-  border: 1px solid;
   height: 55%;
 }
 
@@ -42,7 +39,7 @@
   padding-top: 15px;
 }
 
-.reportBtn {
+.buttonDiv .reportBtn {
   width: 100%;
   height: 40px;
   background: #1b5184;
