--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/DoughnutChart/src/app/donut.css
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/DoughnutChart/src/app/donut.css
@@ -17,31 +17,31 @@
 }
 
 .searchContainer {
-  width: 60%;
-  height: 150px;
+  width: 85%;
+  height: 100px;
 }
 
 .datepickerDiv {
-  width: 48%;
+  width: 25%;
   float: left;
-  height: 55%;
+  margin: 10px;
 }
 
 .locationDiv {
-  width: 48%;
-  float: right;
-  height: 55%;
+  width: 25%;
+  float: left;
+  margin: 10px;
 }
 
 .buttonDiv {
-  width: 30%;
-  float: right;
-  padding-top: 15px;
+  width: 20%;
+  float: left;
+  margin: 2% 0%;
 }
 
 .buttonDiv .reportBtn {
-  width: 100%;
-  height: 40px;
+  width: 60%;
+  height: 35px;
   background: #1b5184;
   font-size: 14px;
   color: white;
