--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/DoughnutChart/src/app/location/index.scss
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/DoughnutChart/src/app/location/index.scss
@@ -17,7 +17,6 @@
   padding: 0.625rem;
   text-align: center;
   font-weight: lighter;
-  height: 3.75rem;
   z-index: 500;
   position: fixed;
 }
@@ -98,7 +97,7 @@
 
 .location {
   margin-left: 3rem;
-  height: 38px;
+  height: 17px;
   line-height: 21px;
   cursor: pointer;
   width: calc(100% - 4.8rem);
@@ -107,7 +106,7 @@
   color: #212121;
   background-color: transparent;
   border: 0;
-  border-bottom: 1px solid rgba(0,0,0,.12);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 
   & > div{
     white-space: nowrap;
