[TPS-40][wang yue] modify label position

--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/DoughnutChart/src/app/date-picker-bar/index.scss
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/DoughnutChart/src/app/date-picker-bar/index.scss
@@ -11,7 +11,6 @@
 .dateLabel {
   position: absolute;
   top: 2rem;
-  left: 3rem;
   font-size: 1rem;
   line-height: 1rem;
   color: rgba(0,0,0,.26);
@@ -27,4 +26,5 @@
 .hasDate {
   top: .375rem;
   font-size: 9pt;
+  left: .1rem;
 }
