[TPS-59][wang yue] display information dynamically

--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/scripts/components/message-reporting/index.scss
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/scripts/components/message-reporting/index.scss
@@ -112,11 +112,14 @@
           background-color: #b4c5d4;
           width: 10%;
           height: 35px;
+          text-align: center;
         }
       }
 
       tbody {
-        text-align: left;
+        td {
+          text-align: left;
+        }
       }
     }
   }
