--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/scripts/components/message-reporting/index.scss
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/scripts/components/message-reporting/index.scss
@@ -124,3 +124,21 @@
     }
   }
 }
+
+#react-paginate {
+  ul {
+    display: inline-block;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  li {
+    display: inline-block;
+  }
+  .break a {
+    cursor: default;
+  }
+}
+
+.commentBox {
+  text-align: center;
+}
