--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/scripts/components/message-reporting/index.scss
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/scripts/components/message-reporting/index.scss
@@ -142,3 +142,14 @@
 .commentBox {
   text-align: center;
 }
+
+.exportDiv {
+  text-align: center;
+  padding-top: 10px;
+  a {
+    font-size: 14px;
+    color: #1B5184;
+    opacity: 0.86;
+    text-decoration: none;
+  }
+}
