[TPS-59][wang yue] add table style

--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/scripts/components/message-reporting/index.scss
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/scripts/components/message-reporting/index.scss
@@ -119,6 +119,10 @@
       tbody {
         font-size: 0.8rem;
 
+        tr:nth-child(even) {
+          background: #dfe6ec;
+        }
+
         td {
           text-align: left;
         }
