changed the position of the doughnut chart

--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/DoughnutChart/src/app/information.scss
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/DoughnutChart/src/app/information.scss
@@ -2,6 +2,8 @@
   width: 400px;
   float: left;
   margin-left: 150px;
+  position: relative;
+  top: -40px;
 
   table {
     border-collapse: collapse;
