--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/DoughnutChart/src/app/donut.css
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/DoughnutChart/src/app/donut.css
@@ -7,7 +7,7 @@
 }
 
 .lastWeek {
-  padding-left: 40px;
+  padding-left: 200px;
 }
 
 .searchContainer {
@@ -48,4 +48,5 @@
 
 .doughnut{
   float: left;
+  padding-top: 12px;
 }
