--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/AlertLog/src/app/alertLog.scss
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/AlertLog/src/app/alertLog.scss
@@ -4,9 +4,18 @@
 }
 
 .datepickerDiv {
-  width: 25%;
+  width: 50%;
   float: left;
   margin: 10px;
+}
+
+.datePickerBar {
+  width: 48%;
+  float: left;
+}
+
+.datePickerBar:nth-child(2) {
+  margin-left: 3%;
 }
 
 .locationDiv {
@@ -32,4 +41,15 @@
 
 .alertLogDiv {
   padding-top: 130px;
+  height: 800px;
+}
+
+.tableContainer {
+  width: 90%;
+  margin: 0 5%;
+  height: 500px;
+}
+
+.commentBox {
+  text-align: center;
 }
