--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/dashboard.vm
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/dashboard.vm
@@ -80,7 +80,7 @@ jQuery( document ).ready( function() {
     </ul>
 </div>
 
-<div id="dashboardListContainer" class="horizontalMenu">
+<div id="dashboardListConftainer" class="horizontalMenu">
     <div id="dashboardListWrapper" class="dashboardList">
         <ul id="dashboardList">
         </ul>
@@ -92,6 +92,7 @@ jQuery( document ).ready( function() {
 </div>
 
 <div id="app-doughnut" ></div>
+<div id="app-alertLog" ></div>
 
 <div id="chartView" class="page">
     <div id="chartViewHeader">
@@ -142,4 +143,5 @@ jQuery( document ).ready( function() {
 </div>
 
 <script type="text/javascript" src="javascript/donut.js"></script>
+<script type="text/javascript" src="javascript/alertLog.js"></script>
 
