[#45][wangyue] modify table style

--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/AlertLog/src/app/table/index.scss
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/AlertLog/src/app/table/index.scss
@@ -1,11 +1,14 @@
 .shortInfo {
   width: 9%;
   height: 50px;
-  background: #EBEBEB;
 }
 
 .longInfo {
-  width: 50px;
+  width: 20%;
+  height: 50px;
+}
+
+th {
   background: #EBEBEB;
 }
 
@@ -15,8 +18,9 @@ td, th {
 }
 
 .alertText {
-  border: 1px solid;
+  width: 27em;
   white-space: nowrap;
   text-overflow: ellipsis;
+  -o-text-overflow: ellipsis;
   overflow: hidden;
 }
