--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/dashboard.vm
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/dashboard.vm
@@ -32,6 +32,7 @@ var i18n_user_org_unit_filter = '$encoder.jsEscape( $i18n.getString( "user_org_u
 var i18n_applies_to_favorites_with_user_org_units_only = '$encoder.jsEscape( $i18n.getString( "applies_to_favorites_with_user_org_units_only" ), "'")';
 var i18n_missing_dashboard_app = '$encoder.jsEscape( $i18n.getString( "missing_dashboard_app" ), "'")';
 var i18n_donut_name = '$encoder.jsEscape( $i18n.getString( "donut_name" ), "'")';
+var i18n_alert_log = '$encoder.jsEscape( $i18n.getString( "alert_log" ), "'")';
 var i18n_donut_title = '$encoder.jsEscape( $i18n.getString( "donut_title" ), "'")';
 var i18n_hf_total_num = '$encoder.jsEscape( $i18n.getString( "hf_total_num" ), "'")';
 var i18n_hf_using_num = '$encoder.jsEscape( $i18n.getString( "hf_using_num" ), "'")';
