--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/dashboard.vm
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/dashboard.vm
@@ -81,7 +81,7 @@ jQuery( document ).ready( function() {
     </ul>
 </div>
 
-<div id="dashboardListConftainer" class="horizontalMenu">
+<div id="dashboardListContainer" class="horizontalMenu">
     <div id="dashboardListWrapper" class="dashboardList">
         <ul id="dashboardList">
         </ul>
