[#45][wangyue] add alertLog

--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/dashboard.vm
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/dashboard.vm
@@ -93,7 +93,7 @@ jQuery( document ).ready( function() {
 </div>
 
 <div id="app-doughnut" ></div>
-##<div id="app-alertLog" ></div>
+<div id="app-alertLog" ></div>
 
 <div id="chartView" class="page">
     <div id="chartViewHeader">
@@ -144,5 +144,5 @@ jQuery( document ).ready( function() {
 </div>
 
 <script type="text/javascript" src="javascript/donut.js"></script>
-##<script type="text/javascript" src="javascript/alertLog.js"></script>
+<script type="text/javascript" src="javascript/alertLog.js"></script>
 
