[#45][wangyue] modify alertLog style

--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/AlertLog/src/app/table/index.scss
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/AlertLog/src/app/table/index.scss
@@ -1,11 +1,13 @@
 .shortInfo {
   width: 9%;
   height: 50px;
+  text-align: center;
 }
 
 .longInfo {
   width: 20%;
   height: 50px;
+  text-align: center;
 }
 
 th {
@@ -23,4 +25,8 @@ td, th {
   text-overflow: ellipsis;
   -o-text-overflow: ellipsis;
   overflow: hidden;
+}
+
+table {
+  border-collapse: collapse;
 }
