[TPS-167][wangyue] display text in the same colour

--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/scripts/components/reporting-row/index.scss
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/scripts/components/reporting-row/index.scss
@@ -79,9 +79,9 @@
   cursor: pointer;
 }
 
-.highlight {
-  color: #D1827F;
-}
+//.highlight {
+//  color: #D1827F;
+//}
 
 .highlightRow {
   background: #ADD8E6;
