--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/scripts/components/ops-reporting/index.scss
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/reporting-page/scripts/components/ops-reporting/index.scss
@@ -213,9 +213,10 @@
 
 .divTable {
   overflow: hidden;
+  height: 100%;
   .tableContainer {
-    height: 735px;
-    width: 1080px;
+    height: 100%;
+    width: 100%;
     position: relative;
     overflow-x: hidden;
     overflow-y: auto;
@@ -235,8 +236,8 @@
     }
 
     .divRight {
-      width: 1080px;
-      height: 735px;
+      width: 100%;
+      height: 100%;
       overflow-y: hidden;
       position: absolute;
 
@@ -249,7 +250,7 @@
 
       .divRightTbody {
         position: absolute;
-        height: 735px;
+        height: 100%;
         overflow-y: scroll;
         overflow-x: hidden;
         top: 0;
