--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/SubmissionReport/src/app/table/index.scss
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/SubmissionReport/src/app/table/index.scss
@@ -31,3 +31,7 @@ tbody tr td:nth-child(1), td:nth-child(2), td:nth-child(3).td:last-child {
   z-index: 999;
   background-color: white;
 }
+
+.leftTableTh {
+  height: 75px;
+}
