[TPS-289][Wang Yue] - modify the page style

--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/SubmissionReport/src/app/submission.css
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/SubmissionReport/src/app/submission.css
@@ -45,9 +45,9 @@
 }
 
 .tableContainer {
-  width: 60%;
-  height: 520px;
-  margin: auto;
+  width: 70%;
+  height: 570px;
+  margin: auto 8%;
 }
 
 .commentBox {
