[TPS-289][Wang Yue] - modify the table style

--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/SubmissionReport/src/app/table/index.scss
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/plugin/SubmissionReport/src/app/table/index.scss
@@ -2,15 +2,10 @@ table {
   border-collapse: collapse;
   table-layout: fixed;
 
-  tr {
-    th {
-      text-align: center;
-      padding: 0 7px;
-    }
-  }
-
   th {
     background: #EBEBEB;
+    text-align: center;
+    padding: 0 7px;
   }
 
   td, th {
@@ -42,4 +37,8 @@ table {
 
 .leftTableTh {
   height: 75px;
+}
+
+.headerTh {
+  padding: 0 7px;
 }
