--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/css/light_blue/light_blue.css
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/css/light_blue/light_blue.css
@@ -317,7 +317,7 @@ input[type=password],input[type=email],textarea
 .page th
 {
   color: #39547d;
-  padding: 3px 0 3px 1px;
+  padding: 4px 6px 4px 6px;
   font-size: 13px;
   font-weight: bold;
   border-collapse: collapse;
